samples/_failures_safe/1761509891_c9ff90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b07c6337.c: In function ‘main’:
./samples/SAFE/__tmp_b07c6337.c:140:37: error: expected ‘]’ at end of input
  140 |     filename[strcspn(filename, "\n")
      |                                     ^
      |                                     ]
./samples/SAFE/__tmp_b07c6337.c:140:5: error: expected declaration or statement at end of input
  140 |     filename[strcspn(filename, "\n")
      |     ^~~~~~~~
